--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     content="coding blogs,
     Artificial intelligence blog,." />
   <meta name="author" content="DMCESHAIDSs,Anshul Soni" />
-  <title>DMCESHAIDSs- Code,Blog,Tech</title>
+  <title>DMCESHAIDS</title>
   <link rel="stylesheet" href="./style/output.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/e650b26129.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./style/home.css" />
 
   <!-- Favicon start -->
-  <link rel="icon" type="image/x-icon" href="assests/logo/bulb with lines.svg" />
+  <link rel="icon" type="image/x-icon" href="./assests/images/logo.jpg">
   <!-- Favicon end -->
 </head>
 
