--- a/index.html
+++ b/index.html
@@ -24,16 +24,35 @@
 
 
 <body class="dark">
-  <div id="loading-animation">
-    <div id="logo">
-      <div class="spinner-square">
-        <div class="square-1 square"></div>
-        <div class="square-2 square"></div>
-        <div class="square-3 square"></div>
-      </div>
-    </div>
+    <div class="loading-screen">
+    <img src="https://media.giphy.com/media/8Xmpiq58FVxkKwfOUF/giphy.gif" alt="Loader" class="loader" style="width: 200px;">
+    <style>
+      .loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000203;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+  }
+    </style>
+           <script>
+    window.addEventListener('load', function() {
+      const loader = document.querySelector('.loading-screen');
+      
+      // Hide the loader after 3 seconds
+      setTimeout(function() {
+        loader.style.display = 'none';
+      }, 3000);
+    });
+  </script>
   </div>
-  <div class="whatsapp">
+  
+  <div class="whatsapp" >
     Join SHAIDS!
     <button class="join-community" onclick="GroupLink()">
       <i class="fa-brands fa-whatsapp" style="font-size: 18px; font-weight: 900; color: #ffffff"></i>
