--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     content="coding blogs,
     Artificial intelligence blog,." />
   <meta name="author" content="DMCESHAIDSs,Anshul Soni" />
-  <title>DMCESHAIDS</title>
+  <title>DMCE-SHAIDS</title>
   <link rel="stylesheet" href="./style/output.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/e650b26129.js" crossorigin="anonymous"></script>
