--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     content="coding blogs,
     Artificial intelligence blog,." />
   <meta name="author" content="DMCESHAIDSs,Anshul Soni" />
-  <title>DMCE-SHAIDS</title>
+  <title>DMCESHAIDS</title>
   <link rel="stylesheet" href="./style/output.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/e650b26129.js" crossorigin="anonymous"></script>
@@ -24,6 +24,15 @@
 
 
 <body class="dark">
+  <div class="custom-cursor"></div>
+  <script>
+    document.addEventListener('mousemove', function(event) {
+var cursor = document.querySelector('.custom-cursor');
+cursor.style.left = event.clientX + 'px';
+cursor.style.top = event.clientY + 'px';
+});
+  </script>
+
     <div class="loading-screen">
     <img src="https://media.giphy.com/media/8Xmpiq58FVxkKwfOUF/giphy.gif" alt="Loader" class="loader" style="width: 200px;">
     <style>
