--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keyword"
     content="coding blogs,
     Artificial intelligence blog,." />
-  <meta name="author" content="DMCESHAIDSs,Anshul Soni" />
+  <meta name="author" content="DMCESHAIDSs,Lorem" />
   <title>DMCESHAIDS</title>
   <link rel="stylesheet" href="./style/output.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" />
@@ -280,7 +280,7 @@ cursor.style.top = event.clientY + 'px';
           <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/sai.jpg"
             alt="" />
           <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">
-            Anshul Soni
+            Lorem
           </h1>
           <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">
             Founder
@@ -330,7 +330,7 @@ cursor.style.top = event.clientY + 'px';
             alt="" />
 
           <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">
-            Divjot Singh Arora
+            Lorem
           </h1>
 
           <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">
@@ -372,7 +372,7 @@ cursor.style.top = event.clientY + 'px';
           <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/ajink.jpg"
             alt="" />
           <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">
-            Jyoti Bhasin
+            Lorem
           </h1>
           <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">
             Community Manager & Content Writer
