--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ cursor.style.top = event.clientY + 'px';
           </h1>
 
           <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">
-            Human Resources
+            impulse
           </p>
 
           <div class="flex mt-3 -mx-2">
@@ -375,7 +375,7 @@ cursor.style.top = event.clientY + 'px';
             Lorem
           </h1>
           <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">
-            Community Manager & Content Writer
+            impules
           </p>
           <div class="flex mt-3 -mx-2">
             <a href="https://.hhhh.com/jyoti-bhasin"
