loading screen updated

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ cursor.style.top = event.clientY + 'px';
   </script>
 
     <div class="loading-screen">
-    <img src="https://media.giphy.com/media/8Xmpiq58FVxkKwfOUF/giphy.gif" alt="Loader" class="loader" style="width: 200px;">
+    <img src="./loading.gif" alt="Loader" class="loader" style="width: 300px;">
     <style>
       .loading-screen {
     position: fixed;
@@ -334,7 +334,7 @@ cursor.style.top = event.clientY + 'px';
           </h1>
 
           <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">
-            impulse
+            Human Resources
           </p>
 
           <div class="flex mt-3 -mx-2">
@@ -375,7 +375,7 @@ cursor.style.top = event.clientY + 'px';
             Lorem
           </h1>
           <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">
-            impules
+            Community Manager & Content Writer
           </p>
           <div class="flex mt-3 -mx-2">
             <a href="https://.hhhh.com/jyoti-bhasin"
