--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="A blogging platform that allows bloggers to write and publish their blogs. Articles on a wide range of topics where you can express your creativity easily." />
+    content="Shaids-Dmce" />
   <meta name="keyword"
-    content="coding blogs,
+    content="Shaids-Dmce,
     Artificial intelligence blog,." />
   <meta name="author" content="DMCESHAIDSs,Lorem" />
   <title>DMCESHAIDS</title>
