--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ cursor.style.top = event.clientY + 'px';
   <!-- Navbar start -->
   <nav class="bg-blue-900 text-white dark:bg-gray-900 dark:text-gray-400 border-gray-200 dark:border-gray-700">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
-      <img src="./assests/images/logo.jpg class="h-16 mr-3" alt="DMCESHAIDS" />
+      <h2 class="text-4xl font-extrabold dark:text-white">SHAIDS</h2>
       <!-- Mobile navbar -->
       <button data-collapse-toggle="navbar-dropdown" type="button"
         class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -164,29 +164,24 @@ cursor.style.top = event.clientY + 'px';
   <section class="bg-blue-900 text-white dark:bg-gray-900 py-20" id="Home" >
     <div class="max-w-screen-xl mx-auto px-4 flex flex-col md:flex-row items-center justify-center">
       <div class="md:mr-8 mb-6 md:mb-0 md:max-w-md">
-        <img src="./assests/images/hero.png" class="h-128 w-full" />
+        <img src="./assests/logo/logo.png" class="h-128 w-full" />
       </div>
       <div class="md:ml-8">
-        <h1 class="text-4xl md:text-5xl font-bold mb-6">DMCE</h1>
-        <h2 class="text-3xl md:text-3xl font-bold mb-6">SHAIDS</h2>
+        <h1 class="text-4xl md:text-5xl font-bold mb-6">Datta Meghe College of Engineering</h1>
+        <h2 class="text-3xl md:text-3xl font-bold mb-6">SHAIDS ( Student hive of Artificial intelligence and Data science )</h2>
         <p class="text-lg md:text-xl mb-8 leading-loose">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque tempore eos doloribus voluptatibus perferendis laboriosam, laudantium deleniti repellat quos fuga!
-          <br />
-         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, distinctio.
-          <br />
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, voluptates.
+          SHAIDS - Student Hives of Artificial Intelligence and Data Science: Empowering minds at Datta Meghe College of Engineering to innovate and excel in AI and Data Science. Join us on a transformative journey of knowledge and collaboration.
         </p>
-        <br>
-        <a href="./publish.hhhh" class="bg-blue-500 text-white px-6 py-3 rounded-full font-bold hover:bg-blue-400">
+        <!-- <a href="./publish.hhhh" class="bg-blue-500 text-white px-6 py-3 rounded-full font-bold hover:bg-blue-400">
           Explore
-        </a>
+        </a> -->
       </div>
     </div>
   </section>
 
   <!-- Main section end -->
   <!-- Blog Section start -->
-  <section class="bg-gray-100 dark:bg-gray-900" id="Blog">
+  <!-- <section class="bg-gray-100 dark:bg-gray-900" id="Blog">
     <h2 class="blog-head text-5xl text-white font-bold text-center">
       upcomming Events
     </h2>
@@ -265,12 +260,12 @@ cursor.style.top = event.clientY + 'px';
         <span class="mx-1"><a href="./blogs.hhhh">Load More</a></span>
       </button>
     </div>     
-  </section>
+  </section> -->
 
   <!-- blog section end -->
   <!-- team section start-->
-  <section class="bg-white dark:bg-gray-900 pt-16">
-    <div class="container px-6 py-10 mx-auto" id="Team">
+  <section class="bg-white dark:bg-gray-900 pt-12">
+    <div class="container px-6 py-1 mx-auto" id="Team">
       <h1 class="text-3xl font-semibold text-center text-gray-800 capitalize lg:text-3xl dark:text-white">
         Our Team
       </h1>
@@ -280,10 +275,10 @@ cursor.style.top = event.clientY + 'px';
           <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/sai.jpg"
             alt="" />
           <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">
-            Lorem
+            Sai Patil
           </h1>
           <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">
-            Founder
+            President
           </p>
           <div class="flex mt-3 -mx-2">
             <a href="https://.hhhh.com/rttwet010"
@@ -330,11 +325,11 @@ cursor.style.top = event.clientY + 'px';
             alt="" />
 
           <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">
-            Lorem
+            Vedant Dal
           </h1>
 
           <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">
-            Human Resources
+            General Secretary
           </p>
 
           <div class="flex mt-3 -mx-2">
@@ -372,10 +367,10 @@ cursor.style.top = event.clientY + 'px';
           <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/ajink.jpg"
             alt="" />
           <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">
-            Lorem
+            Ajink Gupta
           </h1>
           <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">
-            Community Manager & Content Writer
+            Co-GS
           </p>
           <div class="flex mt-3 -mx-2">
             <a href="https://.hhhh.com/jyoti-bhasin"
@@ -398,7 +393,7 @@ cursor.style.top = event.clientY + 'px';
           </div>
         </div>
 
-        <div
+        <!-- <div
           class="flex flex-col items-center p-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-blue-600 dark:border-gray-700 dark:hover:border-transparent">
           <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/yashd.jpg"
             alt="" />
@@ -802,10 +797,10 @@ cursor.style.top = event.clientY + 'px';
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- team section end -->
   <!--Community section start-->
-  <section class="bg-white dark:bg-gray-900 pt-16">
+  <!-- <section class="bg-white dark:bg-gray-900 pt-16">
     <div class="container px-6 py-10 mx-auto" id="Team">
       <h1 class="text-4xl font-semibold text-center text-gray-800 capitalize lg:text-3xl dark:text-white">
         Our Sponsers
@@ -846,11 +841,30 @@ cursor.style.top = event.clientY + 'px';
               alt="" />
             <h1 class="text-3xl font-medium text-white mt-3">lorem</h1>
           </div>
-        </div>
+        </div>-->
       </div>
     </div>
-  </section>
+    <br>
+    <br>
+    <div style="display: flex; justify-content: center; align-items: center;">
+      <button onclick="redirectToGoogle()" class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-600 to-blue-500 group-hover:from-purple-600 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800">
+          <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+              team member list
+          </span>
+      </button>
+  </div>
 
+  <script>
+      function redirectToGoogle() {
+          window.location.href = './ourteam.html';
+      }
+  </script>
+    
+    <br>
+    <br>
+    <br>
+  </section> 
+  
   <!-- statistics-section starts  -->
   <section class="bg-white dark:bg-indigo-900 pt-6 pb-6">
     <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
@@ -900,18 +914,16 @@ cursor.style.top = event.clientY + 'px';
       <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-y-10 lg:grid-cols-4">
         <div class="sm:col-span-2">
           <h1 class="max-w-lg text-xl font-semibold tracking-tight text-gray-800 xl:text-2xl dark:text-white">
-            Subscribe our newsletter to get update.
+            Contact Us
           </h1>
 
           <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row">
-            <input id="email" type="text"
-              class="px-4 py-2 text-gray-700 bg-white border rounded-md dark:bg-gray-900 dark:text-gray-300 dark:border-gray-600 focus:border-blue-400 dark:focus:border-blue-300 focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-blue-300"
-              placeholder="Email Address" />
-
-            <button
-              class="w-full px-6 py-2.5 text-sm font-medium tracking-wider text-white transition-colors duration-300 transform md:w-auto md:mx-4 focus:outline-none bg-gray-800 rounded-lg hover:bg-gray-700 focus:ring focus:ring-gray-300 focus:ring-opacity-80">
-              Subscribe
-            </button>
+            <p class="dark:text-white">
+              DATTA MEGHE COLLEGE OF ENGINEERING<br>
+              SEC-3, AIROLI, NAVI MUMBAI<br>
+              MAHARASHTRA - 400708<br>
+              INDIA<br>
+            </p>
           </div>
         </div>
 
@@ -932,12 +944,12 @@ cursor.style.top = event.clientY + 'px';
         </div>
 
         <div>
-          <img src="./assests/images/logo.jpg" class="h-16 mr-3" alt="DMCESHAIDS" />
+          <img src="./assests/logo/logo.PNG" class="h-16 mr-3" alt="DMCESHAIDS" />
 
           <div class="flex flex-col items-start mt-5 space-y-2">
             <p
               class="text-gray-600 transition-colors duration-300 dark:text-gray-300 dark:hover:text-blue-400 hover:text-blue-500">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam repellat, quibusdam odit, in quod aliqua
+              SHAIDS - Student Hives of Artificial Intelligence and Data Science: Empowering minds at Datta Meghe College of Engineering to innovate and excel in AI and Data Science. Join us on a transformative journey of knowledge and collaboration.
             </p>
           </div>
         </div>
