--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ cursor.style.top = event.clientY + 'px';
   <section class="bg-blue-900 text-white dark:bg-gray-900 py-20" id="Home" >
     <div class="max-w-screen-xl mx-auto px-4 flex flex-col md:flex-row items-center justify-center">
       <div class="md:mr-8 mb-6 md:mb-0 md:max-w-md">
-        <img src="./assests/logo/logo.png" class="h-128 w-full" />
+        <img src="./assests/logo/logo.PNG" class="h-128 w-full" />
       </div>
       <div class="md:ml-8">
         <h1 class="text-4xl md:text-5xl font-bold mb-6">Datta Meghe College of Engineering</h1>
