--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="A blogging platform that allows bloggers to write and publish their blogs. Articles on a wide range of topics where you can express your creativity easily." />
+    content="Shaids-Dmce" />
   <meta name="keyword"
-    content="coding blogs, Coding challenges, Hackathons, Programming journey, Hands-on learning, Inclusive community, Vibrant community, Collaborate, Grow, Programming horizons, Supportive space, Valuable insights, Industry expert, Practical experiences, Learn, Thrive, Tech industry, Coding resources, Coding tutorials, Coding tips, Programming skills, Coding discussions, Coding forums, Programming events, Coding competitions, Coding jobs, Programming opportunities, Coding career." />
-  <meta name="author" content="CodeINBlogs,Anshul Soni" />
+    content="Shaids-Dmce" />
+  <meta name="author" content="Shaids-Dmce" />
   <title>About Us-CodeINBlogs</title>
   <link rel="stylesheet" href="./style/about.css" />
   <link rel="stylesheet" href="./style/style.css" />
