--- a/events.html
+++ b/events.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="A blogging platform that allows bloggers to write and publish their blogs. Articles on a wide range of topics where you can express your creativity easily." />
-  <meta name="keyword" content="coding blogs,
+    content="Shaids-Dmce." />
+  <meta name="keyword" content="Shaids-Dmce,
     Artificial intelligence blog,." />
-  <meta name="author" content="DMCESHAIDSs,Lorem" />
+  <meta name="author" content="DMCESHAIDS,Shaids-Dmce" />
   <title>DMCESHAIDS</title>
   <link rel="stylesheet" href="./style/output.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" />
