--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@ cursor.style.top = event.clientY + 'px';
   <!-- About Us -->
   <section class="container-about mx-auto px-4 py-6 md:py-24 bg-gray-900 text-white">
     <div class="flex flex-col md:flex-row items-center justify-between">
-      <img src="./assests/logo/dmcelogo.png" alt="About Us" style="margin-left: 12%"
+      <img src="./assests/logo/logo.PNG" alt="About Us" style="margin-left: 12%"
         class="logo w-64 h-64 rounded-lg shadow-md md:w-96 md:h-96 mb-8 md:mb-0" />
       <div class="md:w-1/2">
         <h2 class="text-4xl font-bold text-gray-100 mb-4">About Us</h2>
