--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
   <nav class="bg-blue-900 text-white dark:bg-gray-900 dark:text-gray-400 border-gray-200 dark:border-gray-700">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
       <!-- <a href="#" class="flex items-center"> -->
-      <img src="./assests/logo/dmcelogo.png" class="h-16 mr-3" alt="CodeInBlog" />
+        <h2 class="text-4xl font-extrabold dark:text-white">SHAIDS</h2>
       <!-- </a> -->
       <!-- Mobile navbar -->
       <button data-collapse-toggle="navbar-dropdown" type="button"
