--- a/events.html
+++ b/events.html
@@ -37,7 +37,7 @@
   <!-- Navbar start -->
   <nav class="bg-blue-900 text-white dark:bg-gray-900 dark:text-gray-400 border-gray-200 dark:border-gray-700">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
-      <img src="./assests/images/logo.jpg class=" h-16 mr-3 alt="DMCESHAIDS" />
+      <h2 class="text-4xl font-extrabold dark:text-white">SHAIDS</h2>
       <!-- Mobile navbar -->
       <button data-collapse-toggle="navbar-dropdown" type="button"
         class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
