--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,8 @@
   <!-- Navbar start -->
   <nav class="bg-blue-900 text-white dark:bg-gray-900 dark:text-gray-400 border-gray-200 dark:border-gray-700">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
-      <!-- <a href="#" class="flex items-center"> -->
-      <img src="./assests/logo/dmcelogo.png" class="h-16 mr-3" alt="CodeInBlog" />
+      <!-- <a href="#" class="flex items-center"> --><a href="./index.html">
+      <img src="./assests/logo/logo.PNG" class="h-16 mr-3" alt="CodeInBlog" /></a>
       <!-- </a> -->
       <!-- Mobile navbar -->
       <button data-collapse-toggle="navbar-dropdown" type="button"
@@ -70,7 +70,7 @@
 
           <li>
             <a href="./about.html"
-              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparentt">About
+              class="block py-2 pl-3 pr-4 text-black bg-blue-700 rounded md:bg-transparent md:text-black md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent">About
               Us</a>
           </li>
           <li>
@@ -124,7 +124,7 @@
           </li>
           <li>
             <a href="./contact.html"
-              class="block py-2 pl-3 pr-4 text-black bg-blue-700 rounded md:bg-transparent md:text-black md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent">Contact
+              class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact
               Us</a>
           </li>
         </ul>
@@ -174,66 +174,63 @@
         <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-y-10 lg:grid-cols-4">
           <div class="sm:col-span-2">
             <h1 class="max-w-lg text-xl font-semibold tracking-tight text-gray-800 xl:text-2xl dark:text-white">
-              Subscribe our newsletter to get update.
+              Contact Us
             </h1>
-
+  
             <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row">
-              <input id="email" type="text"
-                class="px-4 py-2 text-gray-700 bg-white border rounded-md dark:bg-gray-900 dark:text-gray-300 dark:border-gray-600 focus:border-blue-400 dark:focus:border-blue-300 focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-blue-300"
-                placeholder="Email Address" />
-
-              <button
-                class="w-full px-6 py-2.5 text-sm font-medium tracking-wider text-white transition-colors duration-300 transform md:w-auto md:mx-4 focus:outline-none bg-gray-800 rounded-lg hover:bg-gray-700 focus:ring focus:ring-gray-300 focus:ring-opacity-80">
-                Subscribe
-              </button>
+              <p class="dark:text-white">
+                DATTA MEGHE COLLEGE OF ENGINEERING<br>
+                SEC-3, AIROLI, NAVI MUMBAI<br>
+                MAHARASHTRA - 400708<br>
+                INDIA<br>
+              </p>
             </div>
           </div>
-
+  
           <div>
             <p class="font-semibold text-gray-800 dark:text-white">
               Quick Link
             </p>
-
+  
             <div class="flex flex-col items-start mt-5 space-y-2">
-              <a href="./index.html#Home"
+              <a href="#Home"
                 class="text-gray-600 transition-colors duration-300 dark:text-gray-300 dark:hover:text-blue-400 hover:underline hover:text-blue-500">Home</a>
-              <a href="./index.html#Blog"
+              <a href="#Blog"
                 class="text-gray-600 transition-colors duration-300 dark:text-gray-300 dark:hover:text-blue-400 hover:underline hover:text-blue-500">Blog</a>
-              <a href="./publish.html"
+              <a href="./publish.hhhh"
                 class="text-gray-600 transition-colors duration-300 dark:text-gray-300 dark:hover:text-blue-400 hover:underline hover:text-blue-500">Publish
                 Article</a>
             </div>
           </div>
-
+  
           <div>
-            <img src="./assests/logo/dmcelogo.png" class="h-16 mr-3" alt="CodeInBlog" />
-
+            <img src="./assests/logo/logo.PNG" class="h-16 mr-3" alt="DMCESHAIDS" />
+  
             <div class="flex flex-col items-start mt-5 space-y-2">
               <p
                 class="text-gray-600 transition-colors duration-300 dark:text-gray-300 dark:hover:text-blue-400 hover:text-blue-500">
-                ❝Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident quas et labore fugit placeat eum
-                facere cum quod perspiciatis saepe!❞
+                SHAIDS - Student Hives of Artificial Intelligence and Data Science: Empowering minds at Datta Meghe College of Engineering to innovate and excel in AI and Data Science. Join us on a transformative journey of knowledge and collaboration.
               </p>
             </div>
           </div>
         </div>
-
+  
         <hr class="my-6 border-gray-200 md:my-8 dark:border-gray-700" />
-
+  
         <div class="flex items-center justify-between text-white">
-          <p>&copy; 2023 All rights reserved.</p>
-
+          <p>&copy; 2023 DMCESHAIDS. All rights reserved.</p>
+  
           <div class="flex mt-3 -mx-2">
-            <a href="https://github.com/"
+            <a href="https://.hhhh.com/DMCESHAIDSs-as"
               class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white"
-              aria-label="Github">
+              aria-label=".hhhh">
               <svg xmlns="http://www.w3.org/2000/svg" class="ionicon w-6 h-6 fill-current" viewBox="0 0 512 512">
                 <path
                   d="M256 32C132.3 32 32 134.9 32 261.7c0 101.5 64.2 187.5 153.2 217.9a17.56 17.56 0 003.8.4c8.3 0 11.5-6.1 11.5-11.4 0-5.5-.2-19.9-.3-39.1a102.4 102.4 0 01-22.6 2.7c-43.1 0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1 1.4-14.1h.1c22.5 2 34.3 23.8 34.3 23.8 11.2 19.6 26.2 25.1 39.6 25.1a63 63 0 0025.6-6c2-14.8 7.8-24.9 14.2-30.7-49.7-5.8-102-25.5-102-113.5 0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8a18.64 18.64 0 015-.5c8.1 0 26.4 3.1 56.6 24.1a208.21 208.21 0 01112.2 0c30.2-21 48.5-24.1 56.6-24.1a18.64 18.64 0 015 .5c12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6 0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5 0 30.7-.3 55.5-.3 63 0 5.4 3.1 11.5 11.4 11.5a19.35 19.35 0 004-.4C415.9 449.2 480 363.1 480 261.7 480 134.9 379.7 32 256 32z" />
               </svg>
             </a>
-
-            <a href="https://in.linkedin.com/"
+  
+            <a href="https://in.linkedin.com/company/DMCESHAIDSs"
               class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white"
               aria-label="linkedin">
               <svg xmlns="http://www.w3.org/2000/svg" class="ionicon w-6 h-6 fill-current" viewBox="0 0 512 512">
@@ -241,10 +238,10 @@
                   d="M444.17 32H70.28C49.85 32 32 46.7 32 66.89v374.72C32 461.91 49.85 480 70.28 480h373.78c20.54 0 35.94-18.21 35.94-38.39V66.89C480.12 46.7 464.6 32 444.17 32zm-273.3 373.43h-64.18V205.88h64.18zM141 175.54h-.46c-20.54 0-33.84-15.29-33.84-34.43 0-19.49 13.65-34.42 34.65-34.42s33.85 14.82 34.31 34.42c-.01 19.14-13.31 34.43-34.66 34.43zm264.43 229.89h-64.18V296.32c0-26.14-9.34-44-32.56-44-17.74 0-28.24 12-32.91 23.69-1.75 4.2-2.22 9.92-2.22 15.76v113.66h-64.18V205.88h64.18v27.77c9.34-13.3 23.93-32.44 57.88-32.44 42.13 0 74 27.77 74 87.64z" />
               </svg>
             </a>
-
-            <a href="https://twitter.com/"
+  
+            <a href="https://.hhhher.com/DMCESHAIDSs"
               class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white"
-              aria-label="twitter">
+              aria-label=".hhhher">
               <svg xmlns="http://www.w3.org/2000/svg" class="ionicon w-6 h-6 fill-current" viewBox="0 0 512 512">
                 <path
                   d="M496 109.5a201.8 201.8 0 01-56.55 15.3 97.51 97.51 0 0043.33-53.6 197.74 197.74 0 01-62.56 23.5A99.14 99.14 0 00348.31 64c-54.42 0-98.46 43.4-98.46 96.9a93.21 93.21 0 002.54 22.1 280.7 280.7 0 01-203-101.3A95.69 95.69 0 0036 130.4c0 33.6 17.53 63.3 44 80.7A97.5 97.5 0 0135.22 199v1.2c0 47 34 86.1 79 95a100.76 100.76 0 01-25.94 3.4 94.38 94.38 0 01-18.51-1.8c12.51 38.5 48.92 66.5 92.05 67.3A199.59 199.59 0 0139.5 405.6a203 203 0 01-23.5-1.4A278.68 278.68 0 00166.74 448c181.36 0 280.44-147.7 280.44-275.8 0-4.2-.11-8.4-.31-12.5A198.48 198.48 0 00496 109.5z" />
@@ -252,6 +249,7 @@
             </a>
           </div>
         </div>
+  
       </div>
     </footer>
 
