--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ cursor.style.top = event.clientY + 'px';
     <button class="join-community" onclick="GroupLink()">
       <i class="fa-brands fa-whatsapp" style="font-size: 18px; font-weight: 900; color: #ffffff"></i>
       Join Community
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLScV9kxC424NFX0p0vy0oS9Xg6tf9Z2R72gXFUm2R4skuHuq9w/viewform?usp=sf_link"></a>
     </button>
   </div>
   
