footer join button

--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@ cursor.style.top = event.clientY + 'px';
         </div>
       </div>
     </div>
-    <a href="#"><button class="Join-us" role="button">
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScV9kxC424NFX0p0vy0oS9Xg6tf9Z2R72gXFUm2R4skuHuq9w/viewform?usp=sf_link"><button class="Join-us" role="button">
         <span class="text">Join our Community
           <i class="fa-solid fa-arrow-right-to-bracket"></i></span></button></a>
   </section>
