--- a/ourteam.html
+++ b/ourteam.html
@@ -460,18 +460,20 @@ cursor.style.top = event.clientY + 'px';
           </div>
         </div>
         <div
-          class="flex flex-col items-center p-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-blue-600 dark:border-gray-700 dark:hover:border-transparent">
-          <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/vedang.jpg"
+          class="flex flex-col justify-center text-center items-center p-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-blue-600 dark:border-gray-700 dark:hover:border-transparent">
+          <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/sis.jpg"
             alt="" />
-          <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">
-            Vedang Bandi
 
+          <h1 class="mt-4 justify-center text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">
+            Prakruti Khandagale
           </h1>
+
           <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">
-            Planning Head
+            Sponsorship Head
           </p>
+
           <div class="flex mt-3 -mx-2">
-            <a href="https://www.instagram.com/vedangbandii/"
+            <a href="https://instagram.com/prakruti14"
             class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white"
             aria-label=".hhhhgram">
             <svg xmlns="http://www.w3.org/2000/svg" class="ionicon w-6 h-6 fill-current" viewBox="0 0 512 512">
@@ -483,7 +485,7 @@ cursor.style.top = event.clientY + 'px';
           </a>
 
 
-            <a href="https://www.linkedin.com/in/vedangbandi"
+            <a href="https://www.linkedin.com/in/prakruti-khandagale-17072b228"
               class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white"
               aria-label="linkedin">
               <svg xmlns="http://www.w3.org/2000/svg" class="ionicon w-6 h-6 fill-current" viewBox="0 0 512 512">
@@ -492,6 +494,7 @@ cursor.style.top = event.clientY + 'px';
               </svg>
             </a>
           </div>
+        </div>
         <div
           class="flex flex-col items-center p-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-blue-600 dark:border-gray-700 dark:hover:border-transparent">
           <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/who.jpg"
@@ -565,20 +568,18 @@ cursor.style.top = event.clientY + 'px';
           </div>
         </div>
         <div
-          class="flex flex-col justify-center text-center items-center p-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-blue-600 dark:border-gray-700 dark:hover:border-transparent">
-          <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/sis.jpg"
+          class="flex flex-col items-center p-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-blue-600 dark:border-gray-700 dark:hover:border-transparent">
+          <img class="object-cover w-32 h-32 rounded-full ring-4 ring-gray-300" src="./assests/images/vedang.jpg"
             alt="" />
+          <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">
+            Vedang Bandi
 
-          <h1 class="mt-4 justify-center text-2xl font-semibold text-gray-700 capitalize dark:text-white group-hover:text-white">
-            Prakruti Khandagale
           </h1>
-
           <p class="mt-2 text-gray-500 capitalize dark:text-gray-300 group-hover:text-gray-300">
-            Sponsorship Head
+            Planning Head
           </p>
-
           <div class="flex mt-3 -mx-2">
-            <a href="https://instagram.com/prakruti14"
+            <a href="https://www.instagram.com/vedangbandii/"
             class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white"
             aria-label=".hhhhgram">
             <svg xmlns="http://www.w3.org/2000/svg" class="ionicon w-6 h-6 fill-current" viewBox="0 0 512 512">
@@ -590,7 +591,7 @@ cursor.style.top = event.clientY + 'px';
           </a>
 
 
-            <a href="https://www.linkedin.com/in/prakruti-khandagale-17072b228"
+            <a href="https://www.linkedin.com/in/vedangbandi"
               class="mx-2 text-gray-600 dark:text-gray-300 hover:text-gray-500 dark:hover:text-gray-300 group-hover:text-white"
               aria-label="linkedin">
               <svg xmlns="http://www.w3.org/2000/svg" class="ionicon w-6 h-6 fill-current" viewBox="0 0 512 512">
