--- a/events.html
+++ b/events.html
@@ -136,29 +136,25 @@
         <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
           <!-- Item 1 -->
           <div class="hidden duration-700 ease-in-out" data-carousel-item>
-            <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-1.jpg"
+            <img src="./assests/images/events/event1.jpg"
               class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
           </div>
-          <!-- Item 2 -->
-          <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
+          <!-- <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
             <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-2.jpg"
               class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
           </div>
-          <!-- Item 3 -->
           <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-3.jpg"
               class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
           </div>
-          <!-- Item 4 -->
           <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-4.jpg"
               class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
           </div>
-          <!-- Item 5 -->
           <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-5.jpg"
               class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
-          </div>
+          </div> -->
         </div>
         <!-- Slider controls -->
         <button type="button"
