--- a/events.html
+++ b/events.html
@@ -139,7 +139,7 @@
             <img src="./assests/images/events/event1.jpg"
               class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
           </div>
-          <!-- <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
+          <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
             <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-2.jpg"
               class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
           </div>
@@ -154,7 +154,7 @@
           <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-5.jpg"
               class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
-          </div> -->
+          </div>
         </div>
         <!-- Slider controls -->
         <button type="button"
