--- a/events.html
+++ b/events.html
@@ -129,30 +129,22 @@
 
   <!-- main section start -->
   <section class="bg-blue-900 text-white dark:bg-gray-900 py-20" id="Home">
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="max-w-screen-xl mx-auto px-4 flex flex-col md:flex-row items-center justify-center">
 
       <div id="gallery" class="relative w-full" data-carousel="slide">
         <!-- Carousel wrapper -->
-        <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
+        <div class="relative h-56  rounded-lg md:h-96">
           <!-- Item 1 -->
           <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img src="./assests/images/events/event1.jpg"
               class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
           </div>
           <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
-            <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-2.jpg"
-              class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
-          </div>
-          <div class="hidden duration-700 ease-in-out" data-carousel-item>
-            <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-3.jpg"
-              class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
-          </div>
-          <div class="hidden duration-700 ease-in-out" data-carousel-item>
-            <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-4.jpg"
-              class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
-          </div>
-          <div class="hidden duration-700 ease-in-out" data-carousel-item>
-            <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-5.jpg"
+            <img src="https://techcommunity.microsoft.com/t5/image/serverpage/image-id/366577i4F851B60F8347ED4/image-size/large?v=v2&px=999"
               class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
           </div>
         </div>
@@ -193,6 +185,9 @@
   <!-- Main section end -->
   <!-- Blog Section start -->
   <section class="bg-gray-100 dark:bg-gray-900" id="Blog">
+    <br>
+    <br>
+    <br>
     <h2 class="blog-head text-5xl text-white font-bold text-center">
       upcomming Events
     </h2>
@@ -202,7 +197,7 @@
         <div>
           <div class="relative">
             <img class="object-cover object-center w-full h-64 rounded-lg lg:h-80"
-              src="https://www.totalphase.com/media/blog/2022/11/960x0.jpg" alt="" />
+              src="./assests/images/events/event1.jpg" alt="" />
           </div>
           <h1 class="mt-6 text-xl font-semibold text-gray-800 dark:text-white">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -213,7 +208,7 @@
           <div class="text-center">
             <button type="button"
               class="text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 mt-5">
-              <a href="./articles/Machine Learning/PromptsinAIischallengingtaskinFuture.hhhh">
+              <a href="#">
                 Explore this blog</a>
             </button>
           </div>
@@ -221,7 +216,7 @@
         <div>
           <div class="relative">
             <img class="object-cover object-center w-full h-64 rounded-lg lg:h-80"
-              src="https://www.totalphase.com/media/blog/2022/11/960x0.jpg" alt="" />
+              src="./assests/images/events/event1.jpg" alt="" />
           </div>
           <h1 class="mt-6 text-xl font-semibold text-gray-800 dark:text-white">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -232,7 +227,7 @@
           <div class="text-center">
             <button type="button"
               class="text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 mt-5">
-              <a href="./articles/Machine Learning/PromptsinAIischallengingtaskinFuture.hhhh">
+              <a href="#">
                 Explore this blog</a>
             </button>
           </div>
@@ -240,7 +235,7 @@
         <div>
           <div class="relative">
             <img class="object-cover object-center w-full h-64 rounded-lg lg:h-80"
-              src="https://www.totalphase.com/media/blog/2022/11/960x0.jpg" alt="" />
+              src="https://techcommunity.microsoft.com/t5/image/serverpage/image-id/366577i4F851B60F8347ED4/image-size/large?v=v2&px=999" alt="" />
           </div>
           <h1 class="mt-6 text-xl font-semibold text-gray-800 dark:text-white">
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -251,7 +246,7 @@
           <div class="text-center">
             <button type="button"
               class="text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 mt-5">
-              <a href="./articles/Machine Learning/PromptsinAIischallengingtaskinFuture.hhhh">
+              <a href="#">
                 Explore this blog</a>
             </button>
           </div>
