--- a/events.html
+++ b/events.html
@@ -209,7 +209,7 @@
             <button type="button"
               class="text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 mt-5">
               <a href="#">
-                Explore this blog</a>
+                Explore</a>
             </button>
           </div>
         </div>
@@ -228,7 +228,7 @@
             <button type="button"
               class="text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 mt-5">
               <a href="#">
-                Explore this blog</a>
+                Explore</a>
             </button>
           </div>
         </div>
@@ -247,7 +247,7 @@
             <button type="button"
               class="text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 mt-5">
               <a href="#">
-                Explore this blog</a>
+                Explore</a>
             </button>
           </div>
         </div>
