Added blogs.html and edited events.html

--- a/events.html
+++ b/events.html
@@ -69,7 +69,7 @@
               Us</a>
           </li>
           <li>
-            <a href="#"
+            <a href="./blogs.html"
               class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Blog</a>
           </li>
           <li>
@@ -144,7 +144,11 @@
               class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
           </div>
           <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
-            <img src="https://techcommunity.microsoft.com/t5/image/serverpage/image-id/366577i4F851B60F8347ED4/image-size/large?v=v2&px=999"
+            <img src="./assests/images/events/Githubh_01.jpg"
+              class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
+          </div>
+          <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
+            <img src="./assests/images/events/Web_dev_01.jpg"
               class="absolute block max-w-full h-auto -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="">
           </div>
         </div>
@@ -189,7 +193,7 @@
     <br>
     <br>
     <h2 class="blog-head text-5xl text-white font-bold text-center">
-      upcomming Events
+      Events
     </h2>
     <br>
     <div class="container-blog mx-auto py-8 lg:pl-28 lg:pr-28">
@@ -200,10 +204,10 @@
               src="./assests/images/events/event1.jpg" alt="" />
           </div>
           <h1 class="mt-6 text-xl font-semibold text-gray-800 dark:text-white">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Inauguration of SHAIDS.
           </h1>
           <p class="text-sm text-gray-500 dark:text-gray-400 pt-6">
-            ILorem ipsum dolor sit amet consectetur adipisicing elit.
+            A New Dawn: Inaugurating a Journey of Innovation - SHAIDS Committee's Inauguration.
           </p>
           <div class="text-center">
             <button type="button"
@@ -216,13 +220,13 @@
         <div>
           <div class="relative">
             <img class="object-cover object-center w-full h-64 rounded-lg lg:h-80"
-              src="./assests/images/events/event1.jpg" alt="" />
+              src="./assests/images/events/Githubh_01.jpg" alt="" />
           </div>
           <h1 class="mt-6 text-xl font-semibold text-gray-800 dark:text-white">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Exploring Git & Github.
           </h1>
           <p class="text-sm text-gray-500 dark:text-gray-400 pt-6">
-            ILorem ipsum dolor sit amet consectetur adipisicing elit.
+            Unveiling the World of Version Control: Reflecting on our SHAIDS Committee's Online Seminar on Git and GitHub.
           </p>
           <div class="text-center">
             <button type="button"
@@ -235,13 +239,13 @@
         <div>
           <div class="relative">
             <img class="object-cover object-center w-full h-64 rounded-lg lg:h-80"
-              src="https://techcommunity.microsoft.com/t5/image/serverpage/image-id/366577i4F851B60F8347ED4/image-size/large?v=v2&px=999" alt="" />
+              src="./assests/images/events/Web_dev_01.jpg" alt="" />
           </div>
           <h1 class="mt-6 text-xl font-semibold text-gray-800 dark:text-white">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Frontend Web Development.
           </h1>
           <p class="text-sm text-gray-500 dark:text-gray-400 pt-6">
-            ILorem ipsum dolor sit amet consectetur adipisicing elit.
+            Elevating Web Experiences: Unpacking the SHAIDS Committee's Online Seminar on Frontend Web Development.
           </p>
           <div class="text-center">
             <button type="button"
