--- a/events.html
+++ b/events.html
@@ -135,7 +135,7 @@
     <br>
     <div class="max-w-screen-xl mx-auto px-4 flex flex-col md:flex-row items-center justify-center">
 
-      <div id="gallery" class="relative w-full" data-carousel="slide">
+      <div id="gallery" class="relative w-full" data-carousel="slide" style="overflow:hidden">
         <!-- Carousel wrapper -->
         <div class="relative h-56  rounded-lg md:h-96">
           <!-- Item 1 -->
