--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <meta name="keyword"
     content="Shaids-Dmce" />
   <meta name="author" content="Yash Bhangale" />
-  <title>About Us-CodeINBlogs</title>
+  <title>contacts</title>
   <link rel="stylesheet" href="./style/about.css" />
   <link rel="stylesheet" href="./style/style.css" />
   <link rel="stylesheet" href="./style/output.css" />
